--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$GH_TOKEN@github.com/ninadhatkar/gatsby-starter-contentstack.git"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
