--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "gh-pages": "3.1.0"
   },
   "repository": {
     "type": "git",
