--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gatsby-plugin-manifest": "^2.3.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-source-contentstack": "https://github.com/contentstack/gatsby-source-contentstack.git#add-axios",
+    "gatsby-source-contentstack": "2.2.8",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
